# ntfy_alerts

./: .gitignore  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTION.md  Cargo.toml  Dockerfile  Dockerfile.multi  README.md  entrypoint.sh  index.html  nginx.conf  ntfy.py  ntfy.rs  ntfy_api.py  requirements.txt  script.js  send_discord.py  send_gotify.py  send_ntfy.py  send_slack.py  setup-notify.sh  test.json
.github/: dependabot.yaml
.github/workflows/: build_pr.yml  create_dev.yml  create_release.yml  create_release.yml.old  create_release_arm64.yml  create_release_armv7.yml  dependabot-build.yml
src/: api.rs  config.rs  database.rs  docker.rs  github.rs  main.rs  models.rs
src/notifications/: discord.rs  docker.rs  github.rs  gotify.rs  mod.rs  ntfy.rs  slack.rs
web/: app.vue  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
web/components/: AppFooter.vue  AppHeader.vue  DockerRepoSection.vue  GithubRepoSection.vue  LatestUpdates.vue
web/composables/: useAuth.js
web/middleware/: auth.js  global.global.js
web/pages/: index.vue  login.vue  onboarding.vue  register.vue  settings.vue
web/plugins/: auth.js
