[package]
name = "github-ntfy"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "github-ntfy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = "0.4"
warp = "0.3"